push up height of calendar cell to avoid overlap

--- a/app/assets/stylesheets/calendar/_common.css.sass
+++ b/app/assets/stylesheets/calendar/_common.css.sass
@@ -60,7 +60,6 @@
 
   .cellwrap
     position: relative
-    height: 100%
 
     ul
       height: 100%
@@ -121,7 +120,7 @@
 
   ul
     list-style: none
-    padding: 0
+    padding: 0 0 20px 0
     margin: 5px 0 20px 0
     font-size: $font-size_small
 
